# archive

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  archive.sh
.github/workflows/: review.yml  shellcheck.yml  test.yml
src/: cli.rs  main.rs
tests/: Makefile  args.rs  test-relative.sh  test-standard.sh  test-symlink-inside.sh  test-symlink-outside.sh  user-stories.rs
tests/util/: mod.rs
